--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>BitMarket</title> <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header>
 <h1>Phonk Brazilian</h1>
